[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/TowerDefense/Enemy/tank_blue.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Base.gd" type="Script" id=2]
[ext_resource path="res://Misc/NotRotate.gd" type="Script" id=3]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform vec4 flash_color: hint_color = vec4(1.0);
uniform float opacity: hint_range(0.0, 1.0) = 0.0;

void fragment(){
	vec4 current_color = texture(TEXTURE, UV);
	COLOR = mix(current_color, vec4(flash_color.rgb, current_color.a), opacity);
}"

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = SubResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/opacity = 0.0

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.211765, 0.780392, 0.454902, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="Animation" id=7]
resource_name = "Dead"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Base" type="KinematicBody2D" groups=["Enemies"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 8 )
z_as_relative = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="NotRotate" type="Node2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="ProgressBar" type="ProgressBar" parent="NotRotate"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -35.0
margin_right = 30.0
margin_bottom = -29.0
rect_min_size = Vector2( 60, 6 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="StatePlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 7 )
anims/Hurt = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="hurt" from="." to="." method="_on_Base_hurt"]
[connection signal="tree_exiting" from="." to="." method="_on_Base_tree_exiting"]
